add JS that works but with UI and biz logic in same file

--- a/src/index.html
+++ b/src/index.html
@@ -6,16 +6,18 @@
   <body>
     <div class="container">
       <h1>See how many bikes are stolen in your area!</h1>
-      <label for="location">Enter a location:</label>
+      <label for="location">I want to know about stolen bikes within this many miles of me:</label>
       <input id="location" type="text">
       <label for="color">Enter a color:</label>
       <input id="color" type="text">
       <label for="manufacturer">Enter a manufacturer:</label>
       <input id="manufacturer" type="text">
       <button class="btn-success" id="number">Get Number of stolen bikes!</button>
+
+
       <div class="errors"></div>
       <div class="showNumber"></div>
-      <!-- <div class="showTemp"></div> -->
+
     </div>
   </body>
 </html>
