add additional changes to HTML and JS

--- a/src/index.html
+++ b/src/index.html
@@ -17,6 +17,8 @@
 
       <div class="errors"></div>
       <div class="showNumber"></div>
+      <div class="showTotal"></div>
+      <div class="showResults"></div>
 
     </div>
   </body>
