start of new branch

--- a/src/index.html
+++ b/src/index.html
@@ -15,7 +15,7 @@
       <button class="btn-success" id="number">Get Number of stolen bikes!</button>
 
 
-      <div class="errors"></div>
+      <div class="showErrors"></div>
       <div class="showNumber"></div>
       <div class="showTotal"></div>
       <div class="showResults"></div>
